utoipa/src/snapshots/utoipa__openapi__tests__nest_open_apis.snap
---
source: utoipa/src/openapi.rs
expression: paths
snapshot_kind: text
---
{
  "/api/v1/status": {
    "get": {
      "description": "Get status",
      "responses": {}
    }
  },
  "/api/v1/user/": {
    "get": {
      "description": "Get user details",
      "responses": {}
    }
  },
  "/api/v1/user/foo": {
    "post": {
      "responses": {}
    }
  }
}
