utoipa/src/snapshots/utoipa__openapi__tests__nest_open_apis_same_path_diff_methods.snap
---
source: utoipa/src/openapi.rs
expression: paths
---
{
  "/api/v1/foo": {
    "post": {
      "responses": {}
    }
  },
  "/api/v1/status": {
    "get": {
      "description": "Get status",
      "responses": {}
    },
    "post": {
      "description": "Post status",
      "responses": {}
    }
  }
}
