utoipa/src/snapshots/utoipa__openapi__tests__openapi_custom_extension.snap
---
source: utoipa/src/openapi.rs
assertion_line: 1295
expression: api
---
{
  "openapi": "3.1.0",
  "info": {
    "title": "",
    "version": ""
  },
  "paths": {},
  "x-tagGroup": "anything that serializes to Json"
}
