utoipa/src/snapshots/utoipa__openapi__tests__serialize_openapi_json_minimal_success.snap
---
source: utoipa/src/openapi.rs
assertion_line: 1067
expression: openapi
---
{
  "openapi": "3.1.0",
  "info": {
    "title": "My api",
    "description": "My api description",
    "license": {
      "name": "MIT",
      "url": "http://mit.licence"
    },
    "version": "1.0.0"
  },
  "paths": {}
}
