utoipa/src/snapshots/utoipa__openapi__tests__serialize_openapi_json_with_paths_success.snap
---
source: utoipa/src/openapi.rs
assertion_line: 1098
expression: openapi
---
{
  "openapi": "3.1.0",
  "info": {
    "title": "My big api",
    "version": "1.1.0"
  },
  "paths": {
    "/api/v1/users": {
      "get": {
        "responses": {
          "200": {
            "description": "Get users list"
          }
        }
      },
      "post": {
        "responses": {
          "200": {
            "description": "Post new user"
          }
        }
      }
    },
    "/api/v1/users/{id}": {
      "get": {
        "responses": {
          "200": {
            "description": "Get user by id"
          }
        }
      }
    }
  }
}
